--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
       url: https://github.com/ZeroPass/dmrtd.git
   flutter:
     sdk: flutter
+  flutter_barcode_scanner: ^2.0.0
   flutter_cupertino_datetime_picker: ^3.0.0
   flutter_image_compress: ^1.1.0
   flutter_inappwebview: ^5.7.2+3
